Read bot admin IDs set in .env file

--- a/.env.template
+++ b/.env.template
@@ -23,6 +23,7 @@ MONGO_URI="mongodb://127.0.0.1:100"
 
 # needed by ./bot
 DISCORD_TOKEN=""
+BOT_ADMINS=""
 
 # needed by ./portal
 CAS_LINK="https://cas.my-org.com/login"
