Add Coconut Phishers Discord server to  server_config.ini

--- a/server_config.ini
+++ b/server_config.ini
@@ -115,3 +115,8 @@ grantroles=Verified
 [Discord-CAS Test Server 2024]
 serverid=1239556898592788520
 grantroles=Verified
+
+[Coconut Phishers]
+serverid=1270381307721154683
+setrealname=yes
+grantroles=IIIT-Verified
