add UG 2K24 Server to config

--- a/server_config.ini
+++ b/server_config.ini
@@ -120,3 +120,8 @@ grantroles=Verified
 serverid=1270381307721154683
 setrealname=yes
 grantroles=IIIT-Verified
+
+[UG 2k24]
+serverid=1257361767688830986
+setrealname=yes
+grantroles=Verified
