add UGEEtards server to config

--- a/server_config.ini
+++ b/server_config.ini
@@ -125,3 +125,8 @@ grantroles=IIIT-Verified
 serverid=1257361767688830986
 setrealname=yes
 grantroles=Verified
+
+[UGEEtards]
+serverid=1241111084644044891
+setrealname=no
+grantroles=IIIT
