--- a/server_config.ini
+++ b/server_config.ini
@@ -130,3 +130,8 @@ grantroles=Verified
 serverid=1241111084644044891
 setrealname=no
 grantroles=IIIT
+
+[Team TVRQC]
+serverid=983013244941778974
+setrealname=yes
+grantroles=Verified
